# cardcatch

./: LICENSE
cardcatch/: manage.py  package-lock.json  package.json  pyproject.toml
cardcatch/cardcatch/: asgi.py  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
cardcatch/cardcatch/templates/: base.html  index.html
cardcatch/collection/: admin.py  models.py
cardcatch/collection/migrations/: 0001_initial.py  0002_alter_entry_options.py  0003_remove_collection_total_cards.py  0004_remove_collection_entries_entry_collection.py  0005_remove_entry_user.py  0006_collection_created_at_entry_created_at.py
cardcatch/pokedex/: admin.py  models.py
cardcatch/pokedex/migrations/: 0001_initial.py  0002_remove_card_card_type_card_reverse_holo_and_more.py  0003_rename_expansion_set_rename_expansion_card_set.py  0004_card_created_at_series_created_at_set_created_at.py
