[tool.poetry]
name = "cardcatch"
version = "0.1.0"
description = ""
authors = ["nick van oers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-tailwind = "^3.8.0"
fontawesomefree = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
